hw3/emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - name: redis
    image: redis
    volumeMounts:
    - name: storage
      mountPath: /data/redis
  volumes:
  - name: storage
    emptyDir: {}
